<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TAMs Dineout</string>
    <string name="facebook_app_id">300181831147684</string>
    <string name="fb_login_protocol_scheme">fb300181831147684</string>
    <string name="google_directions_key">AIzaSyBhDRZ160w_2V5wYfv8VZ6UKkNxt-8l2Mw</string>
    <string name="book_your_meal">BOOK YOUR MEAL</string>
    <string name="cuisines">CUISINES</string>
    <string name="drinks">DRINKS</string>
    <string name="pizza">PIZZA</string>
    <string name="my_meal">MY MEAL</string>
    <string name="rice">RICE</string>
    <string name="indian_breads">INDIAN BREADS</string>
    <string name="non_veg">NON-VEG:</string>
    <string name="veg">VEG</string>
    <string name="e_mail_login">E-Mail Login</string>
    <string name="enter_the_email_id_and_password_to_continue">ENTER THE EMAIL ID AND PASSWORD TO CONTINUE</string>
    <string name="enter_the_email_address_here">ENTER THE EMAIL ADDRESS HERE</string>
    <string name="enter_the_password_again">ENTER THE PASSWORD AGAIN</string>
    <string name="login">Login</string>
    <string name="not_user_signup_here">NOT USER? SIGNUP HERE</string>
    <string name="forget_password">FORGET PASSWORD?</string>
    <string name="get_started">Get Started</string>
    <string name="enter_your_phone_no_here_to_receive_otp_to_verify_your_phone_number">ENTER YOUR PHONE NO HERE TO RECEIVE \'OTP\' TO VERIFY YOUR PHONE NUMBER</string>
    <string name="mobile_no">MOBILE NO :</string>
    <string name="enter_the_phone_number_here">ENTER THE PHONE NUMBER HERE</string>
    <string name="enter_the_otp_here">ENTER THE OTP HERE</string>
    <string name="send_otp">Send Otp</string>
    <string name="verify_otp">Verify Otp</string>
    <string name="continue_with_email">CONTINUE WITH EMAIL</string>
    <string name="by_continuing_n_you_will_accept_our_terms_and_conditions">BY CONTINUING \n YOU WILL ACCEPT OUR TERMS AND CONDITIONS</string>
    <string name="name_appear_here">NAME APPEAR HERE</string>
    <string name="email_phone_appear_here">EMAIL/PHONE APPEAR HERE</string>
    <string name="signout">signout</string>
    <string name="tam_s_dineout_menu_card">TAM\'s DINEOUT MENU CARD</string>
    <string name="personal_details">PERSONAL DETAILS</string>
    <string name="enter_the_information_asked_below_to_continue">ENTER THE INFORMATION ASKED BELOW TO CONTINUE</string>
    <string name="enter_your_name_here">ENTER YOUR NAME HERE</string>
    <string name="food_item_name">FOOD ITEM NAME</string>
    <string name="regular">REGULAR</string>
    <string name="price_small">PRICE SMALL</string>
    <string name="medium">MEDIUM</string>
    <string name="price_medium">PRICE MEDIUM</string>
    <string name="large">LARGE</string>
    <string name="price_large">PRICE LARGE</string>
    <string name="quantity">QUANTITY</string>
    <string name="total_rs">TOTAL : Rs.</string>
    <string name="price_total">PRICE TOTAL</string>
    <string name="add_to_my_meal">ADD TO MY MEAL</string>
    <string name="are_you_sure_to_remove_order_from_your_meal">ARE YOU SURE TO REMOVE ORDER FROM YOUR MEAL?</string>
    <string name="remove">REMOVE</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="you_have_not_entered_your_phone_number_you_want_to_proceed">YOU HAVE NOT ENTERED YOUR PHONE NUMBER. YOU WANT TO PROCEED?</string>
    <string name="item_price">ITEM PRICE</string>
    <string name="item_name">ITEM NAME</string>
    <string name="the_cart_isn_t_empty_continuing_will_refresh_the_cart_continue">The Cart Isn\'t Empty. Continuing Will Refresh The Cart, Continue?</string>
    <string name="continue1">CONTINUE</string>
    <string name="total_items">TOTAL ITEMS</string>
    <string name="total_price">TOTAL PRICE:</string>
    <string name="proceed">PROCEED</string>
    <string name="my_meal_today">MY MEAL TODAY</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="my_order">MY ORDER</string>
    <string name="date">DATE</string>
    <string name="book_your_table">BOOK YOUR TABLE</string>
    <string name="book_a_table">BOOK A TABLE</string>
    <string name="music_melody">MUSIC MELODY</string>
    <string name="garden_view">GARDEN VIEW</string>
    <string name="time">TIME</string>
    <string name="bar_here">BAR HERE</string>
    <string name="first_come_first_serve_service">FIRST COME FIRST SERVE SERVICE</string>
    <string name="available">AVAILABLE</string>
    <string name="path_way">PATH WAY</string>
    <string name="family_jam">FAMILY JAM</string>
    <string name="details">DETAILS</string>
    <string name="payment">PAYMENT</string>
    <string name="no_recent_activity">NO RECENT ACTIVITY</string>
    <string name="venue">VENUE :</string>
    <string name="select_the_preferable_time_of_your_dinner">SELECT THE PREFERABLE TIME OF YOUR DINNER</string>
    <string name="_6_30_pm">6:30 PM</string>
    <string name="_7_00_pm">7:00 PM</string>
    <string name="_7_30_pm">7:30 PM</string>
    <string name="_8_00_pm">8:00 PM</string>
    <string name="_8_30_pm">8:30 PM</string>
    <string name="_9_00_pm">9:00 PM</string>
    <string name="_9_30_pm">9:30 PM</string>
    <string name="_6_00pm">6:00PM</string>
</resources>
