<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">
    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/are_you_sure_to_remove_order_from_your_meal"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp" />
    <Button
        android:id="@+id/remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/remove"
        tools:ignore="RtlHardcoded" />
    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@+id/remove"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/cancel"
        tools:ignore="RtlHardcoded" />
</RelativeLayout>