<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="#fff"
    android:orientation="vertical"
    tools:context=".EmailLoginActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <RelativeLayout
            android:id="@+id/r1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:gravity="center_horizontal">
            <ImageView
                android:id="@+id/img1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/splashttl"
                tools:ignore="ContentDescription" />
            <TextView
                android:id="@+id/ttl1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img1"
                android:layout_centerInParent="true"
                android:layout_marginTop="18dp"
                android:text="@string/e_mail_login"
                android:textColor="#C7575656"
                android:textSize="25sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ttl1"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:text="@string/enter_the_email_id_and_password_to_continue"
                android:textColor="#C7575656" />
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/r2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/r1"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/draw1">
                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="12dp"
                    android:gravity="center_vertical"
                    android:hint="@string/enter_the_email_address_here"
                    android:inputType="textEmailAddress"
                    android:textColor="#DA000000"
                    android:textColorHint="#B0000000"
                    android:textSize="14sp"
                    tools:ignore="Autofill,RtlHardcoded" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/typePass"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/draw1">
                <EditText
                    android:id="@+id/editPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="12dp"
                    android:gravity="center_vertical"
                    android:hint="ENTER THE PASSWORD HERE"
                    android:inputType="textPassword"
                    android:textColor="#DA000000"
                    android:textColorHint="#B0000000"
                    android:textSize="14sp"
                    tools:ignore="Autofill,HardcodedText,RtlHardcoded" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/typeCPass"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/draw1">

                <EditText
                    android:id="@+id/editCPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="12dp"
                    android:gravity="center_vertical"
                    android:hint="@string/enter_the_password_again"
                    android:inputType="textPassword"
                    android:textColor="#DA000000"
                    android:textColorHint="#B0000000"
                    android:textSize="14sp"
                    tools:ignore="Autofill,RtlHardcoded" />
            </RelativeLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/draw2"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp"
                android:typeface="sans" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/r3"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_below="@id/r2"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:gravity="right"
                android:text="---------------------------------"
                android:textColor="#B0000000"
                tools:ignore="HardcodedText,MissingPrefix,RtlHardcoded" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:gravity="center"
                android:text="OR"
                android:textColor="#B0000000"
                tools:ignore="HardcodedText" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:gravity="left"
                android:text="---------------------------------"
                android:textColor="#B0000000"
                tools:ignore="HardcodedText,RtlHardcoded" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/r4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/r3">
            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/not_user_signup_here"
                android:textSize="12sp" />
            <Button
                android:id="@+id/btn_forgotPss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnSignUp"
                android:layout_centerHorizontal="true"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/forget_password"
                android:textSize="12sp" />
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>